# chitragupta

./: .env.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/chitragupta/: __init__.py  __main__.py  chunker.py  cli.py  config.py  core.py  embedder.py  search.py
tests/: test_chunker.py  test_core.py  test_embedder.py  test_search.py
